# database_project

./: ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  README.md  analytics_queries.sql  database_schema (1).sql  database_schema.sql  database_schema_simplified.sql  database_schema_updated.sql  docker-compose.yml  dockerignore  env.example  fastapi_backend (1).py  fastapi_backend.py  fastapi_backend_raw_sql.py  fastapi_backend_simplified.py  interface_web (1).html  interface_web (3).html  interface_web.html  interface_web_adapted.html  interface_web_clean.html  nginx.conf  populate_database.py  pyproject.toml  requirements.txt
